--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -35,6 +36,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.omadahealth:swipy:1.2.3@aar'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.2.0'
+    implementation 'com.nex3z:flow-layout:1.1.0'
 
     // Jackson
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.4'
