--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
 
+    // Toasty
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
+
 }
