--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,22 +34,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
+    // Libraries
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.omadahealth:swipy:1.2.3@aar'
     implementation 'me.zhanghai.android.materialratingbar:library:1.2.0'
     implementation 'com.nex3z:flow-layout:1.1.0'
-
-    // Jackson
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.4'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
     implementation 'com.orhanobut:logger:2.1.1'
-
-    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
-
-    // Toasty
     implementation 'com.github.GrenderG:Toasty:1.3.0'
 
 }
